読み込み後にorders保存